[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=2]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[connection signal="start_editor" from="MainMenu" to="." method="_on_MainMenu_start_editor"]
[connection signal="start_level" from="MainMenu" to="." method="_on_MainMenu_start_level"]
